# mcp-knowledgebase-sketch

./: .gitignore  CONTRIBUTING.md  MIGRATION_V2_PROMPT.md  QUICKSTART.md  README.md  app.py  backfill_collections.py  backfill_minio_renames.py  backfill_source_index.py  backup.sh  bibtex_autofill.py  dedupe_qdrant_chunks.py  docker-compose.yml  dockerfile  hybrid_search.py  ingest_missing_minio.py  ingest_pdfs.py  ingest_unstructured.py  mcp_app.py  mcp_cli.py  minio_ingest.py  pyproject.toml  requirements.txt  restore.sh  upload_data_to_redis.py  upsert_chunks.py  validate_collections.py
docs/: Makefile  README.md  index.html  make.bat  test-documentation.md  tool-documentation.md
examples/: ingest_folder.py  ingest_pdf.py  ping_mcp.py  search_demo.py  search_existing.py  upsert_chunks.py
mcp-doc-server/: README.md  docker-compose.yml  dockerfile  requirements.txt  server.py  test-cloudfared.sh
qdrant_storage/: raft_state.json
scripts/: backfill_bibtex_v2.py  backfill_collections.py  backfill_minio_renames.py  backfill_qdrant_metadata.py  backfill_qdrant_v2.py  backfill_redis_v2.py  backfill_source_index.py  generate_test_docs.py  validate_collections.py  validate_schema_parity.py
tests/: __init__.py  test_bibtex_autofill.py  test_bibtex_ui_app.py  test_celery_app.py  test_dashboard_app.py  test_e2e_integration.py  test_hybrid_search.py  test_ingest_missing_minio.py  test_ingest_unstructured.py  test_ingestion_tasks.py  test_link_resolver.py  test_mcp_app.py  test_mcp_cli.py  test_minio_ingest.py  test_minio_ops.py  test_search_ui_app.py  test_upsert_chunks.py  (+1 more)
(+76 files in other folders)
