[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-research"
version = "0.1.0"
description = "FastMCP server and hybrid search utilities."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastmcp<3",
  "celery>=5.3.6",
  "flower>=2.0.1",
  "qdrant-client[fastembed]>=1.9.2",
  "fastembed>=0.3.5",
  "unstructured-client>=0.23.0",
  "redis>=5.0.0",
  "minio>=7.2.0",
]

[project.optional-dependencies]
docs = [
  "sphinx>=7.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"mcp_research.dashboard_static" = ["*.html"]
"mcp_research.bibtex_ui_static" = ["*.html"]
